<?xml version="1.0"?>
<package>
  <name>niryo_one_bringup</name>
  <version>2.2.0</version>
  <description>Provides roslaunch scripts to start Niryo One packages and ros params</description>
  <author>Edouard Renard</author>
  <maintainer email="e.renard@niryo.com">Edouard Renard</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
