<?xml version="1.0"?>
<package>
  <name>niryo_one_description</name>
  <version>2.1.0</version>
  <description>Provides URDF files for Moveit! and IKfast plugin</description>
  <author>Edouard Renard</author>
  <maintainer email="e.renard@niryo.com">Edouard Renard</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
