<?xml version="1.0"?>
<package>
  <name>niryo_one_gazebo</name>
  <version>1.1.0</version>
  <description>gazebo simulation</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="s.elghali@niryo.com">Sarra ELGHALI</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>xacro</run_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
  <build_depend>niryo_one_description</build_depend>
  <run_depend>niryo_one_description</run_depend>

  
  <run_depend>gazebo_ros</run_depend>

  
  <export>
  </export>
</package>
