<?xml version="1.0"?>
<package format="2">
  <name>niryo_one_gazebo</name>
  <version>2.2.0</version>
  <description>Gazebo simulation for Niryo One</description>
  <author>Edouard Renard</author>
  <maintainer email="e.renard@niryo.com">Edouard Renard</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <export>
  </export>
</package>
