<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>niryo_one_ikfast_arm_plugin</name>
  <version>0.1.0</version>
  <description>Provides a kinematic solver which should be faster than the default one (KDL)</description>
  <author>Edouard Renard</author>
  <maintainer email="e.renard@niryo.com">Edouard Renard</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
    <moveit_core plugin="${prefix}/niryo_one_arm_moveit_ikfast_plugin_description.xml"/>
  </export>
  
  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
</package>
