<?xml version="1.0"?>
<package>
  <name>niryo_one_python_api</name>
  <version>2.1.0</version>
  <description>Python API to get Niryo One ROS functionalities, without knowing ROS</description>
  <author>Edouard Renard</author>
  <maintainer email="e.renard@niryo.com">Edouard Renard</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>niryo_one_msgs</build_depend>
  <build_depend>niryo_one_commander</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>niryo_one_msgs</run_depend>
  <run_depend>niryo_one_commander</run_depend>

  <export>
  </export>
</package>
